[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldap-enum"
version = "1.0.0"
description = "Active Directory User Dumper"
authors = [
    { name = "Renato Brescia", email = "killercd@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "ldap3",
    "jinja2"
]

[project.scripts]
ldap-enum = "ldap_enum.cli:main"

[tool.setuptools.packages.find]
include = ["ldap_enum*"]

[tool.setuptools.package-data]
"ldap_enum" = ["r_templates/*.html"]
